--- a/sshvr.html
+++ b/sshvr.html
@@ -3187,6 +3187,17 @@
             showError('Erro ao preparar os dados para envio. Tente novamente.');
             return;
           }
+          const fileInputs = formEl.querySelectorAll('input[type="file"]');
+          fileInputs.forEach(input => {
+            const fieldName = input.name;
+            if(!fieldName) return;
+            formData.delete(fieldName);
+          });
+          Array.from(formData.entries()).forEach(([key, value]) => {
+            if(typeof value === 'string' && value.trim() === ''){
+              formData.delete(key);
+            }
+          });
           formData.delete('email_confirm');
           if(responsibilityCheckbox){
             const fieldName = responsibilityCheckbox.name || 'termoResponsabilidade';
