Center inscrição label

--- a/sshvr.html
+++ b/sshvr.html
@@ -270,7 +270,7 @@
       .inscricao-banner-meta{
         display:flex;
         flex-direction:column;
-        align-items:flex-end;
+        align-items:center;
         gap:.45rem;
       }
       .inscricao-banner-code{
@@ -292,7 +292,7 @@
         text-transform:uppercase;
         color:#6a77b4;
         font-weight:600;
-        text-align:right;
+        text-align:center;
       }
       .inscricao-banner-value{
         display:block;
@@ -309,9 +309,9 @@
         body{ overflow-x:hidden; }
         .frame-card{ margin:-60px auto -60px; padding:1.25rem; }
         .inscricao-banner{ flex-direction:column; align-items:flex-start; padding:1.1rem 1.25rem; gap:1rem; }
-        .inscricao-banner-meta{ align-items:flex-start; width:100%; }
+        .inscricao-banner-meta{ align-items:center; width:100%; }
         .inscricao-banner-code{ align-self:stretch; text-align:center; min-width:auto; border-radius:1.1rem; }
-        .inscricao-banner-label{ text-align:left; }
+        .inscricao-banner-label{ text-align:center; }
         .wizard-shell{ padding:1.25rem 1.1rem; }
         .wizard-heading::before{ width:24px; }
         .wizard-steps{
